Migrated content from the google doc

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,11 @@
          href="http://creativecommons.org/publicdomain/zero/1.0/">
         <img src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;" alt="CC0" />
       </a>
-      <br />
-      To the extent possible under law,
+      <br/>
+      <em>To the extent possible under law,
       <span rel="dct:publisher" resource="[_:publisher]">the person who associated CC0</span>
       with this work has waived all copyright and related or neighboring
-      rights to this work.
+      rights to this work.</em>
     </p>
   </footer>
 </html>
