--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,9 +5,11 @@
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  {% if page.title %}<meta name="description" content="{{ page.title }}">{% endif %}
+  {% if page.title %}
+  <meta name="description" content="{{ page.title }}">{% endif %}
   <link rel="canonical" href="{{ page.url | absolute_url }}">
-  {% if page.robots %}<meta name="robots" content="{{page.robots}}">{% endif %}
+  {% if page.robots %}
+  <meta name="robots" content="{{page.robots}}">{% endif %}
 
   <!-- RSS -->
   <link rel="alternate" type="application/rss+xml" title="RSS" href="/feed.xml">
@@ -16,11 +18,13 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() {dataLayer.push(arguments);}
     gtag('js', new Date());
 
     gtag('config', '{{ site.google_analytics }}');
   </script>
 
   <link rel="stylesheet" type="text/css" href="{{ 'public/css/styles.css' | absolute_url }}">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
